assets/css/style.css
@import url('https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,100..700;1,100..700&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Rajdhani:wght@300;400;500;600;700&family=Raleway:ital,wght@0,100..900;1,100..900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Space+Grotesk:wght@300..700&display=swap');

/* Asterisk for overriding browser defaults */
* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

/* Generic body styles */
body {
    background-color: black;
    min-height: 100vh;
    display: flex;
    flex-direction: column;
    font-family: 'Roboto', Rajdhani, sans-serif;
}

/* Header styles */
header {
    background-color: teal;
    position: fixed;
    box-shadow: 0 2px 2px darkgray;
    width: 100%;
}

header a {
    text-decoration: none;
}

h1 {
    font-family: 'Space Grotesk', sans-serif;
    color: white;
    letter-spacing: 10px;
    text-transform: uppercase;
    font-size: 150%;
    padding: 3% 3%;
}

nav {
    padding-left: 3%;
    padding-top: 2%;
    display: none;
}

#nav-toggle:checked~nav {
    display: block;
}

#nav-toggle {
    display: none;
}

#main-menu {
    font-family: 'Rajdhani', sans-serif;
    letter-spacing: 5px;
    list-style-type: none;
    
}

#main-menu li {
    margin-bottom: 1em;
}
nav a {
    text-decoration: none;
    color: white;
}

.active {
    color: darkred;
    font-weight: bolder;
    text-decoration: underline;
    font-size: larger;
}

/* Main Content styles */
main {
    background-color: whitesmoke;
    flex: 1 0 auto;
}


/* Footer styles */
footer {
    background-color: orange;
}

